# apkfmt

./: .gitmodules  CMakeLists.txt  android_attributes_list.txt
src/: CMakeLists.txt  holder.cpp  holder.h  main.cpp  repack.cpp  repack.h  types.h  validate.cpp  validate.h
src/arsc/: axml_names.cpp  axml_parser.cpp  axml_parser.h  stream.cpp  stream.h  verify.cpp  verify.h
src/res/: manifest.cpp  manifest.h  ro.cpp  ro.h
src/xml/: decoder.cpp  decoder.h
